<?xml version="1.0" encoding="utf-8"?>

<!--layout encapsulating the rest-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:id="@+id/level0"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent" >

    <!--layout for the operation and the result-->
    <LinearLayout
        android:id="@+id/OperationResult"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="SendResult"
            android:text="Button" />

        <TextView
            android:id="@+id/operation"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="bottom|right"
            android:text="@string/OPERATION"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/result"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/RESULT"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <!--layout for the 2nd half-->
    <LinearLayout
        android:id="@+id/level1"
        android:orientation="horizontal"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="4"
        >
        <!--layout for all the numbers-->
        <LinearLayout
            android:id="@+id/Pad"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical">
            <!-- layout for 7 8 9 * -->
            <LinearLayout
                android:id="@+id/first_line"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_seven"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="numbers"
                    android:tag="7"
                    android:text="@string/seven"
                    android:textSize="40sp">
                    7</Button>

                <Button
                    android:id="@+id/bt_eight"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="numbers"
                    android:tag="8"
                    android:text="@string/eight"
                    android:textSize="40sp">
                    8</Button>

                <Button
                    android:id="@+id/bt_nine"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="numbers"
                    android:tag="9"
                    android:text="@string/nine"
                    android:textSize="40sp">
                    9</Button>

                <Button
                    android:id="@+id/bt_multiply"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="numbers"
                    android:tag="*"
                    android:text="@string/multiply"
                    android:textSize="40sp">
                    *
                </Button>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/second_line"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_four"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="numbers"
                    android:tag="4"
                    android:text="@string/four"
                    android:textSize="40sp">
                    7</Button>

                <Button
                    android:id="@+id/bt_five"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="numbers"
                    android:tag="5"
                    android:text="@string/five"
                    android:textSize="40sp">
                    8</Button>

                <Button
                    android:id="@+id/bt_six"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="numbers"
                    android:tag="6"
                    android:text="@string/six"
                    android:textSize="40sp">
                    9</Button>

                <Button
                    android:id="@+id/bt_plus"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="numbers"
                    android:tag="+"
                    android:text="@string/plus"
                    android:textSize="40sp">
                    *
                </Button>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/third_line"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_one"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="numbers"
                    android:tag="1"
                    android:text="@string/one"
                    android:textSize="40sp">1</Button>

                <Button
                    android:id="@+id/bt_two"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="numbers"
                    android:tag="2"
                    android:text="@string/two"
                    android:textSize="40sp">2</Button>

                <Button
                    android:id="@+id/bt_three"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="numbers"
                    android:tag="3"
                    android:text="@string/three"
                    android:textSize="40sp">3</Button>

                <Button
                    android:id="@+id/bt_minus"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="numbers"
                    android:tag="-"
                    android:text="@string/minus"
                    android:textSize="40sp">-
                </Button>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fourth_line"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_zero"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="numbers"
                    android:tag="0"
                    android:text="@string/zero"
                    android:textSize="40sp"></Button>

                <Button
                    android:id="@+id/bt_divide"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="numbers"
                    android:tag="/"
                    android:text="@string/divide"
                    android:textSize="40sp">

                </Button>

            </LinearLayout>
        </LinearLayout>
        <!--layout for the EQUAL-->
        <LinearLayout
            android:id="@+id/layout_equal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <!--
            <Button
                android:id="@+id/bt_equal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="numbers"
                android:tag="="
                android:text="@string/equal"
                android:textSize="40sp">
                =
            </Button>
            -->
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

